removed the blog and bumara to link to my substack and the bumara wepage. removed the actual blog template html file and dalia tale post.

--- a/about.html
+++ b/about.html
@@ -1,111 +1,184 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | Arthur Raines</title>
-    <link rel="icon" type="image/png" href="images/Favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Karla:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/carousel.css">
-</head>
-<body>
-<!-- Navigation -->
-<nav class="nav nav--light">
-    <a href="index.html" class="logo logo--dark">AR</a>
-    <div class="hamburger hamburger--dark" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-</nav>
-
-<!-- Nav Overlay -->
-<div class="nav-overlay" id="navOverlay">
-    <ul class="nav-menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#research">Research</a></li>
-        <li><a href="bumara.html">Bumara</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="index.html#contact" class="cta">Get In Touch</a></li>
-    </ul>
-</div>
-
-<!-- Hero -->
-<header class="about-hero">
-    <h1>Arthur Raines</h1>
-    <p>Researcher and Entrepreneur dedicated to understanding how economic forces shape opportunities for vulnerable populations.</p>
-</header>
-
-<!-- Story -->
-<section class="story">
-    <div class="story__grid">
-        <div class="story__image">
-            <img src="images/IMG_6619.jpeg" alt="Arthur Raines" class="hero__img">
-        </div>
-        <div class="story__content">
-            <h2>Where I Began</h2>
-            <p>I was born in a small village in Liberia, toward the end of the Second Liberian Civil War. To a young child, life there seemed almost impossibly peaceful. Each morning, I'd bathe with a giant oval-shaped bowl, then wander into the forest to a mucky stream where I'd spend hours catching minnows with my bare hands.</p>
-            <p>After playing in the forest, I'd return to the village for the evening meal. One day, the men came back carrying an enormous python. The women set to work immediately, cutting it up for a stew, preparing a large pot with spices I couldn't name. When the signal came to eat, I didn't hesitate.</p>
-
-            <div class="story__image_two">
-                <img src="images/KG.jpeg" alt="Additional story photo" class="story__image_two">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>About | Arthur Raines</title>
+        <link rel="icon" type="image/png" href="images/Favicon.png" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Karla:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/about.css" />
+        <link rel="stylesheet" href="css/carousel.css" />
+    </head>
+    <body>
+        <!-- Navigation -->
+        <nav class="nav nav--light">
+            <a href="index.html" class="logo logo--dark">AR</a>
+            <div class="hamburger hamburger--dark" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
+        </nav>
+
+        <!-- Nav Overlay -->
+        <div class="nav-overlay" id="navOverlay">
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#research">Research</a></li>
+                <li><a href="about.html">About</a></li>
+                <li>
+                    <a
+                        href="https://substack.com/@currenttakes"
+                        target="_blank"
+                        rel="noopener"
+                        >Substack</a
+                    >
+                </li>
+                <li>
+                    <a href="index.html#contact" class="cta">Get In Touch</a>
+                </li>
+            </ul>
         </div>
-    </div>
-</section>
 
-<!-- Full Width Story -->
-<section class="narrative">
-    <div class="narrative__content">
-        <p class="narrative__lead">Those tranquil, carefree days ended the way such days often do in places touched by war: suddenly, and without warning.</p>
+        <!-- Hero -->
+        <header class="about-hero">
+            <h1>Arthur Raines</h1>
+            <p>
+                Researcher and Entrepreneur dedicated to understanding how
+                economic forces shape opportunities for vulnerable populations.
+            </p>
+        </header>
 
-        <p>My memories of what came next are hazy. I remember being moved, often, from one location to another. The reasons were never explained to me, or if they were, I was too young to understand. Once, armed men were spotted nearby. One walked just a few feet from where I was hiding.</p>
+        <!-- Story -->
+        <section class="story">
+            <div class="story__grid">
+                <div class="story__image">
+                    <img
+                        src="images/IMG_6619.jpeg"
+                        alt="Arthur Raines"
+                        class="hero__img"
+                    />
+                </div>
+                <div class="story__content">
+                    <h2>Where I Began</h2>
+                    <p>
+                        I was born in a small village in Liberia, toward the end
+                        of the Second Liberian Civil War. To a young child, life
+                        there seemed almost impossibly peaceful. Each morning,
+                        I'd bathe with a giant oval-shaped bowl, then wander
+                        into the forest to a mucky stream where I'd spend hours
+                        catching minnows with my bare hands.
+                    </p>
+                    <p>
+                        After playing in the forest, I'd return to the village
+                        for the evening meal. One day, the men came back
+                        carrying an enormous python. The women set to work
+                        immediately, cutting it up for a stew, preparing a large
+                        pot with spices I couldn't name.
+                    </p>
+                </div>
+            </div>
+        </section>
 
-        <p>The world froze. The only sound was my heart pounding in my chest. My body felt pinned down by some invisible weight. I had never known fear like that. It wasn't until a guardian whispered that we were safe that the weight finally lifted.</p>
+        <!-- Narrative -->
+        <section class="narrative">
+            <div class="narrative__content">
+                <p class="narrative__lead">
+                    My path from Liberia to the United States was neither
+                    straight nor simple.
+                </p>
 
-        <p>Several years later, at seven years old, I was adopted and moved from Liberia, the only place I had ever known, to a suburban household outside Chicago. The contrast was jarring. I found myself in a completely alien society, trying to make sense of a world that operated by entirely different rules.</p>
-    </div>
-</section>
+                <p>
+                    I arrived in the U.S. as a young child, settling first with
+                    family in New Jersey before eventually making my way to the
+                    Midwest. The transition was jarring in ways that are hard to
+                    articulate. Language, culture, climate - everything was
+                    different. But what stayed constant was a deep curiosity
+                    about how the world works, and a growing awareness that the
+                    circumstances of your birth shape your life in ways most
+                    people never fully reckon with.
+                </p>
 
-<!-- Journey -->
-<section class="journey">
-    <h2>My Journey</h2>
-    <div class="journey__content">
-        <p>These memories stay with me: the uncertainty, the fear, the disorientation of starting over. They are why I do the work I do today and why I chose to study economics. Not economics in the abstract, but economics as a way of understanding how the world fails people, and how it might fail them less.</p>
+                <blockquote>
+                    The question that drives my work is deceptively simple: why
+                    do some children get a fair shot and others don't?
+                </blockquote>
 
-        <p>At Dartmouth, I began exploring these questions directly. I examined the impact of violence on educational attainment for children in Nigeria. The project was eye-opening, not just for what I found, but for what it revealed about the tools economists have to measure harm, and the limits of those tools. It's where my interest in microeconomics took root.</p>
+                <p>
+                    At Dartmouth, I studied Economics and Geography, drawn to
+                    the intersection of quantitative rigor and real-world
+                    complexity. My undergraduate research took me in two
+                    directions that would define my career. First, I examined
+                    the impact of violence on educational attainment for
+                    children in Nigeria. The project was eye-opening, not just
+                    for what I found, but for what it revealed about the tools
+                    economists have to measure harm, and the limits of those
+                    tools. It's where my interest in microeconomics took root.
+                </p>
 
-        <p>For my honors thesis, I turned to Tanzania and a puzzle that seemed, at first glance, counterintuitive: what happens to school enrollment when gold prices rise? Using three rounds of the Tanzanian National Panel Survey and a difference-in-differences strategy, I found that higher gold prices led to lower enrollment among children living near artisanal mines. Families got wealthier, but kids left school. The opportunity cost of education, it turns out, rises with the price of gold.</p>
+                <p>
+                    For my honors thesis, I turned to Tanzania and a puzzle that
+                    seemed, at first glance, counterintuitive: what happens to
+                    school enrollment when gold prices rise? Using three rounds
+                    of the Tanzanian National Panel Survey and a
+                    difference-in-differences strategy, I found that higher gold
+                    prices led to lower enrollment among children living near
+                    artisanal mines. Families got wealthier, but kids left
+                    school. The opportunity cost of education, it turns out,
+                    rises with the price of gold.
+                </p>
 
-        <p>After graduation, I wanted to understand the other side of the equation: how capital markets shape the choices available to families and communities. As a municipal bonds analyst at Nuveen, I focused on general obligation bonds, charter school bonds, and multi-family housing projects. What I learned was sobering. Market forces don't just respond to inequities. They can perpetuate them.</p>
-        <p>Now, as a Research Analyst at the Early Childhood Research Alliance of Chicago (EC*REACH), I work with city agencies in Chicago to clean, organize, and analyze administrative data on early childhood education. I led a project to unduplicate children across seven administrative databases using probabilistic matching techniques. I've contributed to several papers evaluating Chicago's Universal Pre-K program. The work is technical, but the stakes are not. Behind every record is a child, and behind every policy decision is the question of whether we're giving that child a fair shot.</p>
-    </div>
-</section>
+                <p>
+                    After graduation, I wanted to understand the other side of
+                    the equation: how capital markets shape the choices
+                    available to families and communities. As a municipal bonds
+                    analyst at Nuveen, I focused on general obligation bonds,
+                    charter school bonds, and multi-family housing projects.
+                    What I learned was sobering. Market forces don't just
+                    respond to inequities. They can perpetuate them.
+                </p>
+                <p>
+                    Now, as a Research Analyst at the Early Childhood Research
+                    Alliance of Chicago (EC*REACH), I work with city agencies in
+                    Chicago to clean, organize, and analyze administrative data
+                    on early childhood education. I led a project to unduplicate
+                    children across seven administrative databases using
+                    probabilistic matching techniques. I've contributed to
+                    several papers evaluating Chicago's Universal Pre-K program.
+                    The work is technical, but the stakes are not. Behind every
+                    record is a child, and behind every policy decision is the
+                    question of whether we're giving that child a fair shot.
+                </p>
+            </div>
+        </section>
 
+        <!-- Map -->
 
-<!-- Map -->
+        <section class="map-section" aria-labelledby="map-title">
+            <h2 id="map-title">States I've Visited</h2>
+            <p class="map-section__intro">
+                49 out of 50 states. Alaska, you're next.
+            </p>
+            <div class="map-container">
+                <div id="us-map-inline" class="us-map"></div>
+            </div>
+        </section>
 
-<section class="map-section" aria-labelledby="map-title">
-    <h2 id="map-title">States I've Visited</h2>
-    <p class="map-section__intro">49 out of 50 states. Alaska, you're next.</p>
-    <div class="map-container">
-        <div id="us-map-inline" class="us-map"></div>
-    </div>
-</section>
-
-
-<!-- CTA -->
-<section class="cta-section">
-    <h2>Let's Connect</h2>
-    <p>Interested in discussing research collaboration or policy work?</p>
-    <a id="contact-me" class="btn btn--primary">Get In Touch</a>
-</section>
-<script src="js/main.js"></script>
-<script src="js/carousel.js"></script>
-</body>
+        <!-- CTA -->
+        <section class="cta-section">
+            <h2>Let's Connect</h2>
+            <p>
+                Interested in discussing research collaboration or policy work?
+            </p>
+            <a id="contact-me" class="btn btn--primary">Get In Touch</a>
+        </section>
+        <script src="js/main.js"></script>
+        <script src="js/carousel.js"></script>
+    </body>
 </html>
