--- a/index.html
+++ b/index.html
@@ -1,144 +1,224 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arthur Raines | Researcher & Entrepreneur</title>
-    <link rel="icon" type="image/png" href="images/Favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Karla:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/home.css">
-</head>
-<body>
-<!-- Navigation -->
-<nav class="nav nav--dark">
-    <a href="index.html" class="logo logo--light">AR</a>
-    <div class="hamburger hamburger--light" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-</nav>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Arthur Raines | Researcher & Entrepreneur</title>
+        <link rel="icon" type="image/png" href="images/Favicon.png" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Karla:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/home.css" />
+    </head>
+    <body>
+        <!-- Navigation -->
+        <nav class="nav nav--dark">
+            <a href="index.html" class="logo logo--light">AR</a>
+            <div class="hamburger hamburger--light" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
 
-<!-- Nav Overlay -->
-<div class="nav-overlay" id="navOverlay">
-    <ul class="nav-menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#research">Research</a></li>
-        <li><a href="bumara.html">Bumara</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-</div>
-
-<!-- Hero -->
-<section class="hero">
-    <div class="hero__image">
-        <div class="hero__placeholder">
-            <img src="images/me.JPG" alt="Arthur Raines" class="hero__img">
+        <!-- Nav Overlay -->
+        <div class="nav-overlay" id="navOverlay">
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#research">Research</a></li>
+                <li>
+                    <a
+                        href="https://substack.com/@currenttakes"
+                        target="_blank"
+                        rel="noopener"
+                        >Substack</a
+                    >
+                </li>
+                <li><a href="about.html">About</a></li>
+            </ul>
         </div>
-    </div>
-    <div class="hero__content">
-        <p class="hero__location">Chicago, Illinois</p>
-        <h1 class="hero__title">
-            Arthur Raines<br>
-            <em>Researcher & Entrepreneur</em>
-        </h1>
-<!--        <p class="hero__text">-->
-<!--            Transforming complex data into actionable insights for early childhood education policy.-->
-<!--        </p>-->
-        <div class="hero__tags">
-            <span class="tag">Bumara<small>Co-Founder & CEO</small></span>
-            <span class="tag">EC*REACH<small>Research Analyst</small></span>
-        </div>
-        <div class="hero__buttons">
-            <a href="#research" class="btn btn--primary">View Research</a>
-            <a href="bumara.html" class="btn btn--outline-light">About Bumara</a>
-        </div>
-    </div>
-</section>
 
-<!-- Research -->
-<section class="research" id="research">
-    <h2 class="research__title">Featured Research</h2>
-    <div class="research__grid">
-        <article class="card card--sage">
-            <span class="card__number">01</span>
-            <div class="card__icon">
-                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <path d="M12 20h9M16.5 3.5a2.1 2.1 0 013 3L7 19l-4 1 1-4L16.5 3.5z"/>
-                </svg>
+        <!-- Hero -->
+        <section class="hero">
+            <div class="hero__image">
+                <div class="hero__placeholder">
+                    <img
+                        src="images/me.JPG"
+                        alt="Arthur Raines"
+                        class="hero__img"
+                    />
+                </div>
             </div>
-            <span class="card__label">Publication</span>
-            <h3>CPS Enrollment Trends</h3>
-            <p>Analysis of Chicago Public Schools enrollment uptick driven by early grades.</p>
-            <a href="research/CPS_Enrollment.pdf" target="_blank">View PDF</a>
-        </article>
-
-        <article class="card card--rust">
-            <span class="card__number">02</span>
-            <div class="card__icon">
-                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <path d="M17 21v-2a4 4 0 00-4-4H5a4 4 0 00-4 4v2"/>
-                    <circle cx="9" cy="7" r="4"/>
-                    <path d="M23 21v-2a4 4 0 00-3-3.87M16 3.13a4 4 0 010 7.75"/>
-                </svg>
+            <div class="hero__content">
+                <p class="hero__location">Chicago, Illinois</p>
+                <h1 class="hero__title">
+                    Arthur Raines<br />
+                    <em>Researcher & Entrepreneur</em>
+                </h1>
+                <div class="hero__tags">
+                    <span class="tag"
+                        >Bumara<small>Co-Founder & CEO</small></span
+                    >
+                    <span class="tag"
+                        >EC*REACH<small>Research Analyst</small></span
+                    >
+                </div>
+                <div class="hero__buttons">
+                    <a href="#research" class="btn btn--primary"
+                        >View Research</a
+                    >
+                    <a
+                        href="https://www.bumara.com/"
+                        target="_blank"
+                        rel="noopener"
+                        class="btn btn--outline-light"
+                        >About Bumara</a
+                    >
+                </div>
             </div>
-            <span class="card__label">Data Brief</span>
-            <h3>Head Start Impact Study</h3>
-            <p>Examining why Head Start is vital to Chicago's children and communities.</p>
-            <a href="research/Headstart.pdf" target="_blank">View PDF</a>
-        </article>
+        </section>
 
-        <article class="card card--plum">
-            <span class="card__number">03</span>
-            <div class="card__icon">
-                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <line x1="18" y1="20" x2="18" y2="10"/>
-                    <line x1="12" y1="20" x2="12" y2="4"/>
-                    <line x1="6" y1="20" x2="6" y2="14"/>
-                </svg>
+        <!-- Research -->
+        <section class="research" id="research">
+            <h2 class="research__title">Featured Research</h2>
+            <div class="research__grid">
+                <article class="card card--sage">
+                    <span class="card__number">01</span>
+                    <div class="card__icon">
+                        <svg
+                            width="48"
+                            height="48"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1.5"
+                        >
+                            <path
+                                d="M12 20h9M16.5 3.5a2.1 2.1 0 013 3L7 19l-4 1 1-4L16.5 3.5z"
+                            />
+                        </svg>
+                    </div>
+                    <span class="card__label">Publication</span>
+                    <h3>CPS Enrollment Trends</h3>
+                    <p>
+                        Analysis of Chicago Public Schools enrollment uptick
+                        driven by early grades.
+                    </p>
+                    <a href="research/CPS_Enrollment.pdf" target="_blank"
+                        >View PDF</a
+                    >
+                </article>
+
+                <article class="card card--rust">
+                    <span class="card__number">02</span>
+                    <div class="card__icon">
+                        <svg
+                            width="48"
+                            height="48"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1.5"
+                        >
+                            <path d="M17 21v-2a4 4 0 00-4-4H5a4 4 0 00-4 4v2" />
+                            <circle cx="9" cy="7" r="4" />
+                            <path
+                                d="M23 21v-2a4 4 0 00-3-3.87M16 3.13a4 4 0 010 7.75"
+                            />
+                        </svg>
+                    </div>
+                    <span class="card__label">Data Brief</span>
+                    <h3>Head Start Impact Study</h3>
+                    <p>
+                        Examining why Head Start is vital to Chicago's children
+                        and communities.
+                    </p>
+                    <a href="research/Headstart.pdf" target="_blank"
+                        >View PDF</a
+                    >
+                </article>
+
+                <article class="card card--plum">
+                    <span class="card__number">03</span>
+                    <div class="card__icon">
+                        <svg
+                            width="48"
+                            height="48"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1.5"
+                        >
+                            <line x1="18" y1="20" x2="18" y2="10" />
+                            <line x1="12" y1="20" x2="12" y2="4" />
+                            <line x1="6" y1="20" x2="6" y2="14" />
+                        </svg>
+                    </div>
+                    <span class="card__label">Research Report</span>
+                    <h3>Shifting Demographics</h3>
+                    <p>
+                        Analysis of changing demographics of Chicago's young
+                        children.
+                    </p>
+                    <a href="research/Demography_Memo.pdf" target="_blank"
+                        >View PDF</a
+                    >
+                </article>
+
+                <article class="card card--gold">
+                    <span class="card__number">04</span>
+                    <div class="card__icon">
+                        <svg
+                            width="48"
+                            height="48"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1.5"
+                        >
+                            <circle cx="12" cy="12" r="10" />
+                            <path
+                                d="M12 6v2m0 8v2M9 10c0-1 1-2 3-2s3 1 3 2-1 2-3 2-3 1-3 2 1 2 3 2 3-1 3-2"
+                            />
+                        </svg>
+                    </div>
+                    <span class="card__label">Senior Honors Thesis</span>
+                    <h3>Gold Prices & Education in Tanzania</h3>
+                    <p>
+                        A 62% increase in gold prices leads to an 18.6
+                        percentage point decline in enrollment among youth near
+                        artisanal mines, while household wealth increases.
+                    </p>
+                    <a href="research/Raines_Arthur_Thesis.pdf" target="_blank"
+                        >View PDF</a
+                    >
+                </article>
             </div>
-            <span class="card__label">Research Report</span>
-            <h3>Shifting Demographics</h3>
-            <p>Analysis of changing demographics of Chicago's young children.</p>
-            <a href="research/Demography_Memo.pdf" target="_blank">View PDF</a>
-        </article>
+        </section>
 
-        <article class="card card--gold">
-            <span class="card__number">04</span>
-            <div class="card__icon">
-                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <circle cx="12" cy="12" r="10"/>
-                    <path d="M12 6v2m0 8v2M9 10c0-1 1-2 3-2s3 1 3 2-1 2-3 2-3 1-3 2 1 2 3 2 3-1 3-2"/>
-                </svg>
-            </div>
-            <span class="card__label">Senior Honors Thesis</span>
-            <h3>Gold Prices & Education in Tanzania</h3>
-            <p>A 62% increase in gold prices leads to an 18.6 percentage point decline in enrollment among youth near artisanal mines, while household wealth increases.</p>
-            <a href="research/Raines_Arthur_Thesis.pdf" target="_blank">View PDF</a>
-        </article>
-    </div>
-</section>
+        <!-- Quote -->
+        <section class="quote">
+            <blockquote>
+                "I study how early‑life conditions and resource environments
+                shape long‑term outcomes, because by the time the consequences
+                appear, it's already too late to change them."
+            </blockquote>
+        </section>
 
-<!-- Quote -->
-<section class="quote">
-    <blockquote>
-        "I study how early‑life conditions and resource environments shape long‑term outcomes, because by the time the consequences appear, it’s already too late to change them."
-    </blockquote>
-</section>
-
-<!-- Contact -->
-<section class="contact" id="contact">
-    <h2>Let's Get In Touch</h2>
-    <p>Interested in collaborating on research or learning more about my work?</p>
-    <a id="contact-me" class="btn btn--primary">Contact Me</a>
-</section>
-<script src="js/main.js"></script>
-<script src="https://www.google.com/recaptcha/api.js"></script>
-</body>
+        <!-- Contact -->
+        <section class="contact" id="contact">
+            <h2>Let's Get In Touch</h2>
+            <p>
+                Interested in collaborating on research or learning more about
+                my work?
+            </p>
+            <a id="contact-me" class="btn btn--primary">Contact Me</a>
+        </section>
+        <script src="js/main.js"></script>
+        <script src="https://www.google.com/recaptcha/api.js"></script>
+    </body>
 </html>
-
-
