Update about.html to remove the map and update the about narrative.

--- a/about.html
+++ b/about.html
@@ -49,10 +49,6 @@
         <!-- Hero -->
         <header class="about-hero">
             <h1>Arthur Raines</h1>
-            <p>
-                Researcher and Entrepreneur dedicated to understanding how
-                economic forces shape opportunities for vulnerable populations.
-            </p>
         </header>
 
         <!-- Story -->
@@ -69,18 +65,14 @@
                     <h2>Where I Began</h2>
                     <p>
                         I was born in a small village in Liberia, toward the end
-                        of the Second Liberian Civil War. To a young child, life
-                        there seemed almost impossibly peaceful. Each morning,
-                        I'd bathe with a giant oval-shaped bowl, then wander
-                        into the forest to a mucky stream where I'd spend hours
-                        catching minnows with my bare hands.
-                    </p>
-                    <p>
-                        After playing in the forest, I'd return to the village
-                        for the evening meal. One day, the men came back
-                        carrying an enormous python. The women set to work
-                        immediately, cutting it up for a stew, preparing a large
-                        pot with spices I couldn't name.
+                        of the Second Liberian Civil War. For a young child, the
+                        village seemed peaceful. Each morning I would bathe with
+                        a large oval-shaped bowl and then walk into the forest
+                        to a stream where I spent hours catching minnows with my
+                        bare hands. In the evenings the men would return from
+                        hunting. Once they came back carrying an enormous
+                        python, and the women cut it up for a stew in a large
+                        pot with spices I could not name.
                     </p>
                 </div>
             </div>
@@ -89,86 +81,62 @@
         <!-- Narrative -->
         <section class="narrative">
             <div class="narrative__content">
-                <p class="narrative__lead">
-                    My path from Liberia to the United States was neither
-                    straight nor simple.
+                <p>
+                    I moved to the United States as a young child, settling
+                    first with my adoptive family in Kentucky before eventually
+                    reaching Chicago. At Dartmouth, I studied Economics and
+                    Public Policy, drawn to the ways quantitative methods could
+                    be applied to questions about how people make decisions
+                    under constraint.
                 </p>
 
                 <p>
-                    I arrived in the U.S. as a young child, settling first with
-                    family in New Jersey before eventually making my way to the
-                    Midwest. The transition was jarring in ways that are hard to
-                    articulate. Language, culture, climate - everything was
-                    different. But what stayed constant was a deep curiosity
-                    about how the world works, and a growing awareness that the
-                    circumstances of your birth shape your life in ways most
-                    people never fully reckon with.
+                    My first research project examined the impact of violence on
+                    educational attainment for children in Nigeria. The work
+                    sharpened my interest in microeconomics and in the tools
+                    economists use to measure harm. For my honors thesis, I
+                    turned to Tanzania and a question about what happens to
+                    school enrollment when the price of gold rises. Using three
+                    rounds of the Tanzanian National Panel Survey and a
+                    difference-in-differences strategy, I compared households
+                    that varied in their proximity to artisanal and industrial
+                    gold mines. I found that a sixty-two percent increase in the
+                    price of gold led to an 18.6 percentage point decline in
+                    enrollment among individuals fourteen to seventeen years old
+                    living within thirty kilometers of an artisanal mine.
+                    Household wealth increased at the same time. The opportunity
+                    cost of schooling, it turns out, rises with the price of
+                    gold.
                 </p>
 
                 <blockquote>
-                    The question that drives my work is deceptively simple: why
-                    do some children get a fair shot and others don't?
+                    The circumstances of a person's early life, and the economic
+                    environment surrounding them, shape outcomes in ways that
+                    are difficult to reverse once they take hold.
                 </blockquote>
 
                 <p>
-                    At Dartmouth, I studied Economics and Geography, drawn to
-                    the intersection of quantitative rigor and real-world
-                    complexity. My undergraduate research took me in two
-                    directions that would define my career. First, I examined
-                    the impact of violence on educational attainment for
-                    children in Nigeria. The project was eye-opening, not just
-                    for what I found, but for what it revealed about the tools
-                    economists have to measure harm, and the limits of those
-                    tools. It's where my interest in microeconomics took root.
+                    After graduation, I worked as a municipal bonds analyst at
+                    Nuveen, where I focused on general obligation bonds, charter
+                    school bonds, and multi-family housing projects. The role
+                    gave me a view into how capital markets interact with the
+                    communities around them.
                 </p>
 
-                <p>
-                    For my honors thesis, I turned to Tanzania and a puzzle that
-                    seemed, at first glance, counterintuitive: what happens to
-                    school enrollment when gold prices rise? Using three rounds
-                    of the Tanzanian National Panel Survey and a
-                    difference-in-differences strategy, I found that higher gold
-                    prices led to lower enrollment among children living near
-                    artisanal mines. Families got wealthier, but kids left
-                    school. The opportunity cost of education, it turns out,
-                    rises with the price of gold.
-                </p>
-
-                <p>
-                    After graduation, I wanted to understand the other side of
-                    the equation: how capital markets shape the choices
-                    available to families and communities. As a municipal bonds
-                    analyst at Nuveen, I focused on general obligation bonds,
-                    charter school bonds, and multi-family housing projects.
-                    What I learned was sobering. Market forces don't just
-                    respond to inequities. They can perpetuate them.
-                </p>
                 <p>
                     Now, as a Research Analyst at the Early Childhood Research
-                    Alliance of Chicago (EC*REACH), I work with city agencies in
-                    Chicago to clean, organize, and analyze administrative data
-                    on early childhood education. I led a project to unduplicate
-                    children across seven administrative databases using
-                    probabilistic matching techniques. I've contributed to
-                    several papers evaluating Chicago's Universal Pre-K program.
-                    The work is technical, but the stakes are not. Behind every
-                    record is a child, and behind every policy decision is the
-                    question of whether we're giving that child a fair shot.
+                    Alliance of Chicago (EC*REACH), I work with city agencies to
+                    clean, organize, and analyze administrative data on early
+                    childhood education. I led a project to unduplicate children
+                    across seven administrative databases using probabilistic
+                    matching techniques and have contributed to several papers
+                    evaluating Chicago's Universal Pre-K program.
                 </p>
             </div>
         </section>
 
         <!-- Map -->
-
-        <section class="map-section" aria-labelledby="map-title">
-            <h2 id="map-title">States I've Visited</h2>
-            <p class="map-section__intro">
-                49 out of 50 states. Alaska, you're next.
-            </p>
-            <div class="map-container">
-                <div id="us-map-inline" class="us-map"></div>
-            </div>
-        </section>
+        <section class="map-section" aria-labelledby="map-title"></section>
 
         <!-- CTA -->
         <section class="cta-section">
